--- a/Docker_compose_template.yml
+++ b/Docker_compose_template.yml
@@ -1,38 +1,66 @@
-version: "3.5"
+version: '3.5'
 
 services:
   postgres:
     image: postgres:15
+    container_name: zabbix-postgres
     environment:
       POSTGRES_USER: zabbix
-      POSTGRES_PASSWORD: zabbixpass
-      POSTGRES_DB: zabbixdb
+      POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
+      POSTGRES_DB: zabbix
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - zabbix-net
 
   zabbix-server:
-    image: zabbix/zabbix-server-pgsql:alpine-6.0-latest
+    image: zabbix/zabbix-server-pgsql:${ZABBIX_VERSION}
+    container_name: zabbix-server
     environment:
       DB_SERVER_HOST: postgres
       POSTGRES_USER: zabbix
-      POSTGRES_PASSWORD: zabbixpass
-      POSTGRES_DB: zabbixdb
+      POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
+      ZBX_SERVER_NAME: ${ZBX_SERVER_NAME}
     depends_on:
       - postgres
-
-  zabbix-frontend:
-    image: zabbix/zabbix-web-nginx-pgsql:alpine-6.0-latest
     ports:
-      - "8080:8080"
+      - "10051:10051"
+    restart: unless-stopped
+    networks:
+      - zabbix-net
+
+  zabbix-web:
+    image: zabbix/zabbix-web-nginx-pgsql:${ZABBIX_VERSION}
+    container_name: zabbix-frontend
     environment:
       DB_SERVER_HOST: postgres
       POSTGRES_USER: zabbix
-      POSTGRES_PASSWORD: zabbixpass
-      POSTGRES_DB: zabbixdb
+      POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
+      PHP_TZ: ${ZBX_TIMEZONE}
+    depends_on:
+      - postgres
+      - zabbix-server
+    ports:
+      - "${ZABBIX_FRONTEND_PORT}:8080"
+    restart: unless-stopped
+    networks:
+      - zabbix-net
+
+  zabbix-agent:
+    image: zabbix/zabbix-agent:alpine-6.4-latest
+    container_name: zabbix-agent
+    environment:
       ZBX_SERVER_HOST: zabbix-server
-      PHP_TZ: Europe/Tehran
+      ZBX_HOSTNAME: docker-agent
     depends_on:
       - zabbix-server
+    restart: unless-stopped
+    networks:
+      - zabbix-net
 
 volumes:
-  pg_data:
+  pgdata:
+
+networks:
+  zabbix-net:
