--- a/Phase-2/.env
+++ b/Phase-2/.env
@@ -3,3 +3,4 @@ ZBX_DB_PASSWORD=zabbixpass
 ZBX_SERVER_NAME=Zabbix Docker Monitoring
 ZABBIX_FRONTEND_PORT=8080
 ZBX_TIMEZONE=Asia/Tehran
+GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=alexanderzobnin-zabbix-app
