--- a/Phase-2/zabbix_stack.yml
+++ b/Phase-2/zabbix_stack.yml
@@ -26,6 +26,7 @@ services:
       - postgres
     ports:
       - "10051:10051"
+      - "10050:10050"
     restart: unless-stopped
     networks:
       - zabbix-net
@@ -35,6 +36,7 @@ services:
     container_name: zabbix-frontend
     environment:
       DB_SERVER_HOST: postgres
+      ZBX_SERVER_HOST: zabbix-server
       POSTGRES_USER: zabbix
       POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
       PHP_TZ: ${ZBX_TIMEZONE}
@@ -65,3 +67,4 @@ volumes:
 networks:
   zabbix-net:
     external: true
+
