--- a/Phase-2/zabbix-stack.yml
+++ b/Phase-2/zabbix-stack.yml
@@ -1,90 +1,71 @@
 services:
-
-  postgres-server:
-    image: postgres:15-alpine
-    container_name: zbx-postgres
+  postgres:
+    image: postgres:15
+    container_name: zabbix_postgres
     environment:
       POSTGRES_USER: zabbix
-      POSTGRES_PASSWORD: zabbix_pass
+      POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
       POSTGRES_DB: zabbix
     volumes:
-      - ./zbx_env/pg_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
+    restart: unless-stopped
     networks:
-      - zbx_net
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U zabbix"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 20s
+      - zabbix-net
 
   zabbix-server:
-    image: zabbix/zabbix-server-pgsql:alpine-7.0-latest
-    container_name: zbx-server
-    depends_on:
-      - postgres-server
+    image: zabbix/zabbix-server-pgsql:${ZABBIX_VERSION}
+    container_name: zabbix-server
     environment:
-      DB_SERVER_HOST: postgres-server
+      DB_SERVER_HOST: postgres
       POSTGRES_USER: zabbix
       POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
       ZBX_SERVER_NAME: ${ZBX_SERVER_NAME}
-      ZBX_TIMEZONE: ${ZBX_TIMEZONE}
-    volumes:
-      - ./zbx_env/alertscripts:/usr/lib/zabbix/alertscripts
-      - ./zbx_env/externalscripts:/usr/lib/zabbix/externalscripts
+    depends_on:
+      - postgres
     ports:
       - "10051:10051"
+      - "10050:10050"
+    restart: unless-stopped
     networks:
-      - zbx_net
-    healthcheck:
-      test: ["CMD", "sh", "-c", "zabbix_server -V >/dev/null 2>&1 || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+      - zabbix-net
 
   zabbix-web:
-    image: zabbix/zabbix-web-nginx-pgsql:alpine-7.0-latest
-    container_name: zbx-web
-    depends_on:
-      - zabbix-server
+    image: zabbix/zabbix-web-nginx-pgsql:${ZABBIX_VERSION}
+    container_name: zabbix-frontend
     environment:
-      DB_SERVER_HOST: postgres-server
-      POSTGRES_USER: zabbix
-      POSTGRES_PASSWORD: zabbix_pass
+      DB_SERVER_HOST: postgres
       ZBX_SERVER_HOST: zabbix-server
-      PHP_TZ: Asia/Tehran
+      POSTGRES_USER: zabbix
+      POSTGRES_PASSWORD: ${ZBX_DB_PASSWORD}
+      PHP_TZ: ${ZBX_TIMEZONE}
+    depends_on:
+      - postgres
+      - zabbix-server
     ports:
-      - "8080:8080"
-      - "8443:8443"
+      - "${ZABBIX_FRONTEND_PORT}:8080"
+    restart: unless-stopped
     networks:
-      - zbx_net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/index.php"] 
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
+      - zabbix-net
 
   zabbix-agent:
-    image: zabbix/zabbix-agent:alpine-7.0-latest
-    container_name: zbx-agent
-    depends_on:
-      - zabbix-server
+    image: zabbix/zabbix-agent2:alpine-6.4-latest
+    container_name: zabbix-agent
     environment:
       ZBX_SERVER_HOST: zabbix-server
-      ZBX_HOSTNAME: docker-host
+      ZBX_HOSTNAME: docker-agent
+    group_add:
+      - 111
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zabbix-server
+    restart: unless-stopped
     networks:
-      - zbx_net
-    ports:
-      - "10050:10050"
-    healthcheck:
-      test: ["CMD", "zabbix_agentd", "-V"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 15s
+      - zabbix-net
+
+volumes:
+  pgdata:
 
 networks:
-  zbx_net:
-    driver: bridge
+  zabbix-net:
+    external: true
