change IP nginx default configuration to localhost

--- a/Phase-2/nginx/default.conf
+++ b/Phase-2/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 192.168.174.136;
+    server_name 127.0.0.1
 
     location /zabbix/ {
         proxy_pass http://zabbix-web:8080/;
