--- a/Phase-2/.env
+++ b/Phase-2/.env
@@ -4,4 +4,5 @@ ZBX_SERVER_NAME=Zabbix Docker Monitoring
 ZABBIX_FRONTEND_PORT=8080
 ZBX_TIMEZONE=Asia/Tehran
 GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=alexanderzobnin-zabbix-app
+GF_INSTALL_PLUGINS=alexanderzobnin-zabbix-app
 
