add healthcheck to nginx_stack.yml

--- a/Phase-2/nginx_stack.yml
+++ b/Phase-2/nginx_stack.yml
@@ -12,6 +12,13 @@ services:
     networks:
       - zabbix-net
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
 
 networks:
   zabbix-net:
