--- a/Phase-2/.env
+++ b/Phase-2/.env
@@ -3,6 +3,8 @@ ZBX_DB_PASSWORD=zabbixpass
 ZBX_SERVER_NAME=Zabbix Docker Monitoring
 ZABBIX_FRONTEND_PORT=8080
 ZBX_TIMEZONE=Asia/Tehran
+GF_SERVER_ROOT_URL=/grafana
+GF_SERVER_SERVE_FROM_SUB_PATH=true
 GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=alexanderzobnin-zabbix-app
 GF_INSTALL_PLUGINS=alexanderzobnin-zabbix-app
 
