Add URL root to grafana and change the nginx/default for redirection loop problem

--- a/Phase-2/nginx/default.conf
+++ b/Phase-2/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 127.0.0.1;
+    server_name localhost 127.0.0.1 0.0.0.0;
 
     location /zabbix/ {
         proxy_pass http://zabbix-web:8080/;
@@ -11,11 +11,11 @@ server {
     }
 
     location /grafana/ {
+	rewrite ^/grafana/(.*) /$1 break;
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        #       rewrite ^/grafana/(.*) /$1 break;
     }
 }
