Reverse Proxy add

--- a/Phase-3-Ansible/deploy-monitoring.yml
+++ b/Phase-3-Ansible/deploy-monitoring.yml
@@ -1,7 +1,9 @@
 ---
-- name: Deploy Zabbix + Grafana Stack using Role
+- name: Deploy Zabbix + Grafana Stack using Role + NGINX 
   hosts: monitoring
   become: yes
 
   roles:
     - monitoring
+    - reverse-proxy
+
