--- a/Phase-3-Ansible/roles/monitoring/handlers/main.yml
+++ b/Phase-3-Ansible/roles/monitoring/handlers/main.yml
@@ -1,2 +1,9 @@
 ---
 # handlers file for roles/monitoring
+
+---
+- name: restart monitoring stack
+  command: docker compose up -d
+  args:
+    chdir: "{{ monitoring_install_path }}"
+
