--- a/Phase-3-Ansible/roles/monitoring/tasks/main.yml
+++ b/Phase-3-Ansible/roles/monitoring/tasks/main.yml
@@ -1,16 +1,18 @@
 ---
-# tasks file for roles/monitoring
-- name: Create monitoring directory if not exists
+---
+- name: Create monitoring directory
   file:
     path: "{{ monitoring_install_path }}"
     state: directory
     mode: '0755'
 
-- name: Copy docker-compose.yml to target
-  copy:
-    src: docker-compose.yml
+- name: Render docker-compose.yml from template
+  template:
+    src: docker-compose.yml.j2
     dest: "{{ monitoring_install_path }}/docker-compose.yml"
     mode: '0644'
+  notify: restart monitoring stack
+
 
 - name: Launch monitoring stack
   command: docker compose up -d
