Solve the problem of reverse proxy

--- a/Phase-3-Ansible/deploy-monitoring.yml
+++ b/Phase-3-Ansible/deploy-monitoring.yml
@@ -1,9 +1,10 @@
 ---
-- name: Deploy Zabbix + Grafana Stack using Role + NGINX 
+- name: Deploy Zabbix + Grafana Stack using Role + NGINX + grafana provisioning
   hosts: monitoring
   become: yes
 
   roles:
     - monitoring
     - reverse-proxy
+    - grafana-provision
 
