--- a/Phase-3-Ansible/roles/grafana-provision/files/grafana/provisioning/dashboard.yml
+++ b/Phase-3-Ansible/roles/grafana-provision/files/grafana/provisioning/dashboard.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 providers:
   - name: 'zabbix-dashboards'
     orgId: 1
-    folder: ''
+    folder: 'General'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
