--- a/Phase-3-Ansible/roles/grafana-provision/tasks/main.yml
+++ b/Phase-3-Ansible/roles/grafana-provision/tasks/main.yml
@@ -5,21 +5,22 @@
     state: directory
     recurse: yes
   loop:
-    - "{{ playbook_dir }}/files/grafana/provisioning/datasources"
-    - "{{ playbook_dir }}/files/grafana/provisioning/dashboards"
+    - "/opt/monitoring/files/grafana/provisioning/datasources"
+    - "/opt/monitoring/files/grafana/provisioning/dashboards"
 
 - name: Copy datasource config to provisioning directory
   copy:
     src: grafana/provisioning/datasources/zabbix-datasource.yml
-    dest: "{{ playbook_dir }}/files/grafana/provisioning/datasources/zabbix-datasource.yml"
+    dest: "/opt/monitoring/files/grafana/provisioning/datasources/zabbix-datasource.yml"
 
 - name: Copy dashboard JSON to provisioning directory
   copy:
     src: grafana/provisioning/dashboards/zabbix-dashboard.json
-    dest: "{{ playbook_dir }}/files/grafana/provisioning/dashboards/zabbix-dashboard.json"
+    dest: "/opt/monitoring/files/grafana/provisioning/dashboards/zabbix-dashboard.json"
 
 - name: Copy dashboard provider config (dashboard.yml)
   copy:
     src: grafana/provisioning/dashboard.yml
-    dest: "{{ playbook_dir }}/files/grafana/provisioning/dashboard.yml"
+    dest: "/opt/monitoring/files/grafana/provisioning/dashboard.yml"
+    force: yes
 
